--- a/index.html
+++ b/index.html
@@ -127,10 +127,7 @@
             <img class="myImage" src="images/headImage.jpg" alt="Image: Keenan Naicker">
             <div class="col-12">
                 <p class="lead">
-                    Software Engineer Student at based in South Africa, Gauteng.
-                    I am currently Studying at HyperionDev pursuing my journey as a Software Engineer.
-                    Through my journey so far I have learned a hand full of skills including Python, Java
-                    OOP, TDD, Version Control(Git) and many more.
+                    Software Engineer based in South Africa, Gauteng. I recently completed Bootcamp at HyperionDev pursuing my journey as a Software Engineer.
                 </p>
                 <p class="lead">
                     I always had a passion for code which grew immensely once I started coding with HyperionDev
